<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2i_lfe_navigation</name>
  <version>0.0.0</version>
  <description>Package to autonomously navigate in the office of the Chair for Ergonomics, TU Munich</description>
  <maintainer email="joana.haase@tum.de">Joana Haase</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/turtlebot2i_lfe_navigation</url>
  <author email="joana.haase@tum.de">Joana Haase</author>

  <build_depend>dynamic_reconfigure</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>ros_astra_sdk_wrapper</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>ros_astra_sdk_wrapper</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>ros_astra_sdk_wrapper</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
